[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest bitcoind process, useful in integration testing environment"
documentation = "https://docs.rs/bitcoind/"
edition = "2018"
license = "MIT"
name = "bitcoind"
repository = "https://github.com/RCasatta/bitcoind"
version = "0.27.0"

[dependencies]
bitcoincore-rpc = {git = "https://github.com/oraichain/rust-bitcoincore-rpc.git", rev = "c58eeec"}
log = "0.4"
tempfile = "3.1"
which = "4.2.5"

[dev-dependencies]
env_logger = "0.8"

[build-dependencies]
bitcoin_hashes = "0.10"
tar = "0.4"
zip = "0.5"

# allows to keep MSRV 1.41.1
filetime = "=0.2.15"
flate2 = "=1.0.22"
ureq = "1.0"

[features]
"0_17_1" = []
"0_18_0" = []
"0_18_1" = []
"0_19_0_1" = []
"0_19_1" = []
"0_20_0" = []
"0_20_1" = []
"0_21_0" = []
"0_21_1" = []
"22_0" = []
"23_0" = []
